--- a/src/components/Tree.css
+++ b/src/components/Tree.css
@@ -1,19 +1,19 @@
 .tree {
   list-style-type: none;
-  padding-left: 2ex;
+  margin: 0 0 0 2ex;
+  padding: 0;
 }
 
 .tree--title {
-  border: 1px solid transparent;
   display: flex;
-  padding: 4px;
+  padding: 4px 2ex;
   transition-duration: 300ms;
-  transition-property: border, box-shadow;
+  transition-property: box-shadow;
 }
 
 .tree--title:hover {
   border-color: gainsboro;
-  box-shadow: 0 3px 10px 1px #999;
+  box-shadow: 0 0 20px 0px #999;
 }
 
 .tree--label {
@@ -25,37 +25,38 @@
 
 [class*="tree--icon"] {
   background: #EEE;
-  border: 1px solid transparent;
-  border-radius: 1ex;
+  /* border-radius: 1ex; */
   color: #999;
   cursor: pointer;
   line-height: 1.3;
   padding: 0 1ex;
   text-align: center;
+  transition: 300ms;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
 }
 
-[class*="tree--icon__add"] {
-  transition: 300ms;
-}
-
 [class*="tree--icon__add"]:hover {
   background: lightgreen;
-  border-color: lightgreen;
   color: #444;
 }
-/*
-[class*="tree--icon__add-sibling"] {
-  border-radius: 1ex 0 0 1ex;
+
+[class*="tree--icon__collapse"]:hover {
+  background: lightblue;
+  color: #444;
 }
 
-[class*="tree--icon__add-sibling"]:hover {
-  background: lightblue;
-  border-color: lightblue;
-} */
+[class*="tree--icon__drag"] {
+  margin-right: 2ex;
+}
+
+[class*="tree--icon__drag"]:hover {
+  background: #DDD;
+  color: #444;
+}
+
 /*
 [class*="tree--icon__estimate"] {
   background: white;
@@ -75,11 +76,9 @@
 
 [class*="tree--icon__remove"] {
   margin: 0;
-  transition: 300ms;
 }
 
 [class*="tree--icon__remove"]:hover {
   background: #c11f1f;
-  border-color: #c11f1f;
   color: white;
 }
