--- a/src/components/Tree.css
+++ b/src/components/Tree.css
@@ -13,13 +13,23 @@
 }
 
 .tree--title {
+  /* border: 2px solid transparent; */
+  border-radius: 4px;
+  border-left: 0;
+  border-right: 0;
   display: flex;
   padding: 4px 2ex;
   transition-duration: 300ms;
   transition-property: box-shadow;
 }
 
-.isHovered {background: orange;}
+.tree--title.drop-child {border-bottom: 1ex solid blue;}
+.tree--title.drop-sibling {border-top: 1ex solid orange;}
+
+.isHovered {
+  background: gainsboro;
+  background: rgba(0, 0, 0, 0.1);
+}
 
 .tree--title:hover {
   border-color: gainsboro;
