--- a/src/components/Tree.css
+++ b/src/components/Tree.css
@@ -4,6 +4,14 @@
   padding: 0;
 }
 
+.collapse-closed > .tree {
+  display: none;
+}
+
+.collapse-closed .tree--label:after {
+  content: " ...";
+}
+
 .tree .tree {
   margin: 0 0 0 4ex;
 }
