--- a/src/components/Icons.css
+++ b/src/components/Icons.css
@@ -1,11 +1,11 @@
 [class*="tree--icon"] {
-  background: #EEE;
+  background: #eee;
   color: #999;
   cursor: pointer;
   line-height: 1.3;
-  opacity: 0.3;
+  position: relative;
   padding: 0 1ex;
-  text-align: center;
+  top: 0;
   transition: 300ms;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -13,34 +13,28 @@
   user-select: none;
 }
 
-:hover > [class*="tree--icon"] {
-  opacity: 1;
-}
-
 [class*="tree--icon__add"]:hover {
-  background: lightgreen;
-  color: #444;
-}
-
-[class*="tree--icon__collapse"]:hover {
   background: lightblue;
   color: #444;
 }
 
-[class*="tree--icon__drag"] {
-  margin-right: 2ex;
-}
-
-[class*="tree--icon__drag"]:hover {
-  background: #DDD;
+[class*="tree--icon__collapse"]:hover,
+[class*="tree--icon__estimate"]:hover {
+  background: lightgreen;
   color: #444;
 }
 
+[class*="tree--icon__estimate"] {
+  background: none;
+  top: 2px;
+}
+
 [class*="tree--icon__remove"] {
-  margin: 0;
+  margin-left: 1ex;
 }
 
 [class*="tree--icon__remove"]:hover {
   background: #c11f1f;
   color: white;
+  margin-left: 12ex;
 }
