--- a/src/components/Tree/Icons.css
+++ b/src/components/Tree/Icons.css
@@ -1,5 +1,5 @@
 [class*="tree--icon"] {
-  background: #eee;
+  /* background: #eee; */
   color: #999;
   cursor: pointer;
   line-height: 1.3;
@@ -26,15 +26,10 @@
 
 [class*="tree--icon__estimate"] {
   background: none;
-  top: 2px;
-}
-
-[class*="tree--icon__remove"] {
-  margin-left: 1ex;
 }
 
 [class*="tree--icon__remove"]:hover {
   background: #c11f1f;
   color: white;
-  margin-left: 12ex;
+  margin-left: 4ex;
 }
