--- a/src/components/App.css
+++ b/src/components/App.css
@@ -63,31 +63,6 @@
   max-width: 120ex;
 }
 
-.addEpic {
-  display: flex;
-  margin-bottom: 3ex;
-}
-
-.addEpic * {
-  border: 0;
-  border-bottom: 1px solid #444;
-  font-size: 1em;
-}
-
-button {
-  background: darkGreen;
-  border: 0;
-  color: white;
-  font-size: 1em;
-  padding: .5ex 2ex;
-}
-
-.addEpic input {
-  display: inline-block;
-  flex-grow: 1;
-  padding: 0 1ex;
-}
-
 .dataLinks {
   float: right;
 }
@@ -118,4 +93,12 @@ a:hover,
 
 .app-columns__one .app--info {
   display: none;
+}
+
+.addItem {
+  display: inline-block;
+  font-size: 100%;
+  margin-top: 2ex;
+  margin-left: 2ex;
+  width: calc(100% - 4ex);
 }
