--- a/src/components/Details.css
+++ b/src/components/Details.css
@@ -1,22 +1,26 @@
-.app--info {
+.planning--details {
   background: rgba(0, 0, 0, 0.1);
   border-radius: 0 4px 4px 0;
   padding: 0 1ex 2ex;
 }
 
-.app--info h2 {
+.app-columns__one .planning--details {
+  display: none;
+}
+
+.planning--details h2 {
   border-bottom: 1px solid;
   color: #444;
   font-size: 120%;
   margin-top: 0.7ex;
 }
 
-.formField + .formField {
+.planning--details .formField + .formField {
   margin-top: 2ex;
 }
 
-.formField input,
-.formField textarea {
+.planning--details .formField input,
+.planning--details .formField textarea {
   border: 1px solid #aaa;
   font-size: 1em;
   margin: 0;
@@ -24,18 +28,18 @@
   width: 100%;
 }
 
-.formField label {
+.planning--details .formField label {
   display: block;
 }
 
-.formField textarea {
+.planning--details .formField textarea {
   height: 12ex;
 }
 
-.formField.buttons button {
+.planning--details .formField.buttons button {
   float: right;
 }
 
-input[disabled] {
+.planning--details input[disabled] {
   color: black;
 }
