--- a/src/components/Tree/index.css
+++ b/src/components/Tree/index.css
@@ -14,18 +14,15 @@
 }
 
 .tree--title {
-  border-radius: 4px 0 0 4px;
-  border-left: 0;
-  border-right: 0;
   cursor: pointer;
   display: flex;
   padding: 4px 1ex 4px 0;
   transition: box-shadow 300ms;
 }
 
-.tree--title.drop-after:not(.isDragging) {border-bottom: 1ex solid blue;}
-.tree--title.drop-before:not(.isDragging) {border-top: 1ex solid blue;}
-.tree--title.drop-child:not(.isDragging) {border-bottom: 1ex solid orange;}
+.tree--title.drop-after:not(.isDragging) {border-bottom: 3ex solid blue;}
+.tree--title.drop-before:not(.isDragging) {border-top: 3ex solid blue;}
+.tree--title.drop-child:not(.isDragging) {border-bottom: 3ex solid orange;}
 
 .tree--title small {
   color: gainsboro;
@@ -38,6 +35,7 @@
 
 .tree--title:not(.selected):hover {
   box-shadow: 0 0 20px 0px #999;
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.15);
 }
 
 .tree--label {
